k8s/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app.kubernetes.io/name: loki
  ports:
    - protocol: TCP
      port: 3100
      name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: loki
  name: loki
spec:
  replicas: 1
  serviceName: loki
  selector:
    matchLabels:
      app.kubernetes.io/name: loki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki
    spec:
      containers:
        - image: grafana/loki:2.6.1
          name: loki
          volumeMounts:
            - mountPath: "/loki"
              name: loki-data
            - mountPath: "/etc/loki"
              name: loki-config
      volumes:
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-data
        - name: loki-config
          configMap:
            name: loki-config
