k8s/sonar-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-api
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonar-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonar-api
    spec:
      containers:
        - name: sonar-api
          image: sonarapi:testing
          imagePullPolicy: Always
          workingDir: /sonar/sonar-api
          ports:
            - containerPort: 8081
          securityContext:
            allowPrivilegeEscalation: false
      terminationGracePeriodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: sonar
spec:
  selector:
    app.kubernetes.io/name: sonar-api
  ports:
    - protocol: TCP
      port: 8081
      name: http
