k8s/sonar-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-ui
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonar-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonar-ui
    spec:
      containers:
        - name: sonar-ui
          image: sonarui:testing
          imagePullPolicy: Always
          workingDir: /usr/share/nginx/html/
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /usr/share/nginx/html/config
              name: configmap-vol
      volumes:
        - name: configmap-vol
          configMap:
            name: api-url-env
      terminationGracePeriodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-ui
spec:
  selector:
    app.kubernetes.io/name: sonar-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
