k8s/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 9090
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: sonar-strip-prometheus-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prometheus-prefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: prometheus
  name: prometheus
spec:
  replicas: 1
  serviceName: prometheus
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
    spec:
      containers:
        - image: prom/prometheus:v2.38.0
          name: prometheus
          args:
            - "--web.enable-remote-write-receiver"
            - "--storage.tsdb.retention.time=10d"
            - "--config.file=/etc/prometheus/config/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/usr/share/prometheus/console_libraries"
            - "--web.console.templates=/usr/share/prometheus/consoles"
          volumeMounts:
            - mountPath: "/prometheus"
              name: prometheus-data
            - mountPath: "/etc/prometheus/config"
              name: prometheus-config
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
        - name: prometheus-config
          configMap:
            name: prometheus-config
